refactoring, testing and commentation with readme